--- a/WerewolfClient/Menu.resx
+++ b/WerewolfClient/Menu.resx
@@ -117,62 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Icon_head_hunter" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_head_hunter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_bodyguard" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_bodyguard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_jailer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_jailer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_medium.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_monkey" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_monkey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_doctor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_doctor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_seer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_seer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_aura_seer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_aura_seer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_wolf_shaman" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_wolf_shaman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_villager" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_villager.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_fool" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_fool.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_priest" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_priest.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_serial_killer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_serial_killer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_alpha_werewolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_alpha_werewolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_werewolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_werewolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_gunner" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_gunner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_wolf_seer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon_wolf_seer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Daytime" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Daytime.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nighttime" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nighttime.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
